# Multi-Hop-Reasoning

./: .env  .gitignore  =0.10.2  INSTALLATION.md  README.md  eval_lmlm.slurm  grpo.slurm  lmlm_generated_rollouts.json  lmlm_hotpotqa_trajectory.py  phase1_database_checkpoint-1750_hotpotqa_dev_2026-03-12_23-00-07.json  phase1_database_checkpoint-240_hotpotqa_dev_2026-03-12_23-33-23.json  pyproject.toml  requirement_lx.txt  requirements.txt  search_r1_musique.py
data/: 495_w_context_examples.json
db_analysis/: add_ground_truth.py  check_context_source.py  check_duplicates.py  coverage_analysis.py  coverage_analysis_directed.py  extract_case.py  kg_case_study.py  structure_analysis.py
examples/: search_r1_hotpotqa.py  search_r1_musique.py
experiment/: print_direct_table.py  print_multihop_table.py
menghan-scripts/: check_context_type.py  eval_inference_2wiki_all.slurm  eval_inference_2wiki_golden.slurm  eval_inference_all.slurm  eval_inference_csv.slurm  eval_inference_golden.slurm  eval_inference_musique_all.slurm  eval_inference_musique_golden.slurm  eval_inference_musique_golden_ckpt500.slurm  find_repetitive_tokens.py  grpo_lr1e5.slurm  grpo_sweep.slurm  grpo_sweep2.slurm  grpo_sweep3.slurm  grpo_sweep4.slurm  grpo_training_mx.sh  grpo_training_mx.slurm  grpo_training_mx_hyper.slurm  phase1_eval.sh  phase2_eval.sh  run_db_analysis.sh  run_inference_csv.py
multi_hop_reasoning.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
reward_hacking_evaluate/: phase1_results.json
ryan-scripts/: combine_3.py  eval.slurm  eval_batch.slurm  (+15 more)
(+203 files in other folders)
