[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-hop-reasoning"
version = "0.1.0"
description = "Multi-hop reasoning evaluation and experimentation toolkit"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Mihir Mishra", email = "mrm367@cornell.edu"},
]
license = {text = "MIT"}

dependencies = [
    "datasets>=2.14.0",
    "openai>=1.0.0",
    "pandas>=1.5.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
# Command-line entry points
hotpotqa-evaluate = "hotpotqa.evaluate:main"
hotpotqa-predict = "hotpotqa.predict:main"

[tool.setuptools.packages.find]
include = ["eval*", "hotpotqa*"]
exclude = ["examples*", "scripts*", "tests*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by black)

